--- a/PlanningPokerConsole/PlanningPokerConsole.csproj
+++ b/PlanningPokerConsole/PlanningPokerConsole.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandParser.cs" />
+    <Compile Include="ConsoleGraphics.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
